# Pebble

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md  deny.toml  design_claude.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  replace.mjs  vite.config.ts
server/: Cargo.toml  tauri.conf.json
server/capabilities/: default.json
server/icons/: icon.icns
server/src/: account_colors.rs  auth.rs  events.rs  gmail_realtime.rs  lib.rs  mail_latency.rs  main.rs  push_notifications.rs  session.rs  snooze_watcher.rs  state.rs
server/src/api/: accounts.rs  attachments.rs  auth_api.rs  compose.rs  docs.rs  error.rs  labels.rs  messages.rs  mod.rs  notifications.rs  query.rs  resources.rs  shell.rs  sync.rs  threads.rs
server/src/middleware/: mod.rs
server/src/realtime/: mod.rs
server/src/rpc/: accounts.rs  advanced_search.rs  attachments.rs  batch.rs  blocking.rs  cloud_sync.rs  compose.rs  contacts.rs  diagnostics.rs  dispatch.rs  drafts.rs  folder_counts.rs  folders.rs  gmail_realtime.rs  health.rs  imap_pool.rs  indexing.rs  kanban.rs  labels.rs  mod.rs  network.rs  notifications.rs  oauth.rs  pending_mail_ops.rs  rules.rs  search.rs  snooze.rs  sync_cmd.rs  sync_cmd_support.rs  threads.rs  translate.rs  trusted_senders.rs  user_data.rs
server/tests/: api_baseline.rs  api_rpc_inventory.rs
server/tests/api_test/: auth.rs  compose.rs  diagnostics.rs  drafts.rs  health.rs  labels.rs  main.rs  messages.rs  notifications.rs  preferences.rs  (+5 more)
(+419 files in other folders)
