[package]
name = "pebble"
version = "0.0.12"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
axum = { workspace = true }
opener = "0.7"
pebble-core = { path = "../crates/pebble-core" }
pebble-store = { path = "../crates/pebble-store" }
pebble-privacy = { path = "../crates/pebble-privacy" }
pebble-mail = { path = "../crates/pebble-mail" }
pebble-search = { path = "../crates/pebble-search" }
pebble-rules = { path = "../crates/pebble-rules" }
pebble-translate = { path = "../crates/pebble-translate" }
pebble-crypto = { path = "../crates/pebble-crypto" }
pebble-oauth = { path = "../crates/pebble-oauth" }
lettre = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
base64 = "0.22"
tower-http = { version = "0.6.8", features = ["cors", "compression-full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
axum-extra = { version = "0.9", features = ["cookie"] }
cookie = { version = "0.18" }
bcrypt = "0.16"
uuid = { workspace = true }
web-push = { workspace = true }
p256 = { workspace = true }
http02 = { workspace = true }
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tempfile = "3"
tower = "0.5"
